--- a/src/app/pages/command/command-import-wb/command-import-wb.component.html
+++ b/src/app/pages/command/command-import-wb/command-import-wb.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIf="importing || result">
+<mat-card *ngIf="importing || result" class="mat-elevation-z6">
   <mat-card-content>
     <div *ngIf="importing" class="row">
       <div class="col-xl-12">
@@ -22,25 +22,48 @@
     </div>
   </mat-card-content>
 </mat-card>
-<mat-card>
-  <mat-card-content>
-    <div class="form-group row">
-      <label for="plan" class="label col-sm-1 col-form-label">Plan</label>
-      <div class="col-sm-11">
-        <mat-form-field class="full-width">
+<mat-card-content>
+  <div class="form-group row">
+    <div class="col-xl-12">
+      <mat-form-field class="full-width">
         <textarea rows="10" class="example-full-width" id="plan" matInput placeholder="Plan"
                   [formControl]="control"></textarea>
-          <mat-hint>Befehle in der Übersicht auswählen und mit STRG+C kopieren.</mat-hint>
-        </mat-form-field>
-      </div>
+        <mat-hint>Befehle in der Übersicht auswählen und mit STRG+C kopieren.</mat-hint>
+      </mat-form-field>
     </div>
-    <div class="form-group row">
-      <div class="offset-sm-1 col-sm-11">
-        <button (click)="submit(control.value)" [disabled]="control.invalid || control.disabled"
-                type="submit" mat-raised-button color="primary">
-          Importieren
-        </button>
-      </div>
+  </div>
+  <div class="form-group row">
+    <div class="col-md-12">
+      <mat-form-field>
+        <mat-label>Katapult Ziel</mat-label>
+        <mat-select [formControl]="catapultControl">
+          <mat-select-trigger *ngIf="catapultControl.value !== '///DEFAULT///'">
+            <div class="flex-between">
+              <span>{{catapultControl.value | titlecase}}</span>
+              <img *ngIf="imagebase" matSuffix
+                   [src]="imagebase+'buildings/'+catapultControl.value+'.png'"
+                   class="img-fluid"/>
+            </div>
+          </mat-select-trigger>
+          <mat-option value="///DEFAULT///">Default</mat-option>
+          <mat-option *ngFor="let building of buildings" [value]="building">
+            <div class="flex-between">
+              <span>{{building | titlecase}}</span>
+              <img *ngIf="imagebase" matSuffix [src]="imagebase+'buildings/'+building+'.png'"
+                   class="img-fluid"/>
+            </div>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
-  </mat-card-content>
-</mat-card>
+  </div>
+  <div class="form-group row">
+    <div class="col-sm-11">
+      <button (click)="submit(control.value, catapultControl.value)"
+              [disabled]="control.invalid || control.disabled"
+              type="submit" mat-raised-button color="primary">
+        Importieren
+      </button>
+    </div>
+  </div>
+</mat-card-content>
