--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -30,7 +30,7 @@
         <a routerLink="/settings/ip">
           <button mat-menu-item>
             <mat-icon>dialpad</mat-icon>
-            <span>Bot IP-Addresse</span>
+            <span>Bot Verbindung</span>
           </button>
         </a>
       </mat-menu>
