--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,15 @@
 <div class="row">
   <div class="col-xl-6">
-    <app-admin-update></app-admin-update>
+    <div class="row">
+      <div class="col-xl-12">
+        <app-admin-proxy-connections></app-admin-proxy-connections>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-12">
+        <app-admin-update></app-admin-update>
+      </div>
+    </div>
   </div>
   <div class="col-xl-6">
     <div class="row">
