--- a/src/app/pages/command/command-import-wb/command-import-wb.component.html
+++ b/src/app/pages/command/command-import-wb/command-import-wb.component.html
@@ -33,7 +33,7 @@
     </div>
   </div>
   <div class="form-group row">
-    <div class="col-md-12">
+    <div class="col-md-3">
       <mat-form-field>
         <mat-label>Katapult Ziel</mat-label>
         <mat-select [formControl]="catapultControl">
@@ -55,6 +55,17 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
+    </div>
+    <div class="col-md-3">
+      <div>
+        <mat-checkbox [formControl]="showMS">MS überschreiben.</mat-checkbox>
+      </div>
+      <div>
+        <mat-form-field *ngIf="showMS.value === true">
+          <mat-label>MS</mat-label>
+          <input matInput type="number" min="0" max="999" [formControl]="msForm">
+        </mat-form-field>
+      </div>
     </div>
   </div>
   <div class="form-group row">
