--- a/src/app/pages/command/command-schedule/command-schedule.component.html
+++ b/src/app/pages/command/command-schedule/command-schedule.component.html
@@ -36,7 +36,7 @@
         <div class="col">
           <mat-form-field>
             <mat-label>Ankunftszeit</mat-label>
-            <input matInput maxlength="12" formControlName="time"/>
+            <input matInput formControlName="time"/>
           </mat-form-field>
         </div>
         <div class="col">
