--- a/src/app/pages/incs/incs.component.html
+++ b/src/app/pages/incs/incs.component.html
@@ -2,5 +2,6 @@
   <span mat-tab-link *ngFor="let link of links" (click)="activeLink = link"
         [active]="activeLink === link"
         [routerLink]="[link.link]"> {{link.title}} </span>
+  <span mat-tab-link (click)="heatmap()"> Heatmap </span>
 </nav>
 <router-outlet></router-outlet>
