--- a/src/app/pages/planner/planner-fakes/fake-selector-table/fake-selector-table.component.html
+++ b/src/app/pages/planner/planner-fakes/fake-selector-table/fake-selector-table.component.html
@@ -91,5 +91,16 @@
         </mat-card>
       </div>
     </div>
+    <div class="row">
+      <div class="col-xl-12">
+        <mat-card class="mat-elevation-z6">
+          <button mat-mini-fab (click)="filter()">
+            <mat-icon>
+              filter_list
+            </mat-icon>
+          </button>
+        </mat-card>
+      </div>
+    </div>
   </div>
 </div>
