--- a/src/app/pages/incs/incs.component.html
+++ b/src/app/pages/incs/incs.component.html
@@ -2,6 +2,7 @@
   <span mat-tab-link *ngFor="let link of links" (click)="activeLink = link"
         [active]="activeLink === link"
         [routerLink]="[link.link]"> {{link.title}} </span>
-  <span mat-tab-link (click)="heatmap()"> Heatmap </span>
+  <span mat-tab-link (click)="heatmap('INCOMING')"> Heatmap Eintreffend </span>
+  <span mat-tab-link (click)="heatmap('OUTGOING')"> Heatmap Ausgehend </span>
 </nav>
 <router-outlet></router-outlet>
