--- a/src/app/pages/planner/planner-command/planner-command.component.html
+++ b/src/app/pages/planner/planner-command/planner-command.component.html
@@ -1,9 +1,13 @@
 <mat-card>
   <div class="row">
-    <div class="col-md-12 flex-between">
+    <div class="col-md-11 flex-between">
       Truppen
       <span><b>Ziel:</b> <app-village-render [value]="target"></app-village-render></span>
       <span><b>Ankunft:</b> {{time.format('DD.MM.YYYY HH:mm:ss:SSS')}}</span>
+    </div>
+    <div class="col-md-1">
+      <mat-slide-toggle [formControl]="unitDisplay"
+                        matTooltip="Verplante Truppen abziehen."></mat-slide-toggle>
     </div>
   </div>
   <hr>
@@ -94,7 +98,7 @@
             <span [class.dis]="element.available[unit]===0"
                   [class.red]="element.available[unit]>0 && element.remaining[unit]===0"
                   (click)="openScheduler([element.village], target, type, unit, time.valueOf())">
-              {{element.available[unit]}}
+              {{subtract ? element.available[unit] : element.units[unit]}}
             </span>
           </mat-cell>
         </ng-container>
