--- a/src/app/pages/farm/farm-route/farm-route-edit/farm-route-edit.component.html
+++ b/src/app/pages/farm/farm-route/farm-route-edit/farm-route-edit.component.html
@@ -33,7 +33,7 @@
           <span></span>
           <button [disabled]="!form.valid || form.disabled" type="submit" mat-raised-button
                   color="primary">
-            Hinzufügen
+            Bearbeiten
           </button>
         </div>
       </div>
