--- a/src/app/pages/farm/farm-overview/farm-overview.component.html
+++ b/src/app/pages/farm/farm-overview/farm-overview.component.html
@@ -1,23 +1,60 @@
 <div class="row">
   <div class="col-xl-12">
     <mat-card class="mb-3">
-      <div class="flex-between">
-        <div>
-          <mat-slide-toggle [formControl]="slide"></mat-slide-toggle>
-          <mat-form-field class="ml-3">
-            <mat-label>Max Angriffe</mat-label>
-            <input matInput [formControl]="max" type="number">
-            <mat-hint>Maximale Anzahl an Angriffen pro Babarendorf.</mat-hint>
-          </mat-form-field>
-        </div>
-        <button mat-mini-fab color="primary" (click)="add()">
-          <mat-icon>add</mat-icon>
-        </button>
-      </div>
+        <mat-slide-toggle [formControl]="slide"></mat-slide-toggle>
+        <mat-form-field class="ml-3">
+          <mat-label>Max Angriffe</mat-label>
+          <input matInput [formControl]="max" type="number">
+          <mat-hint>Maximale Anzahl an Angriffen pro Babarendorf.</mat-hint>
+        </mat-form-field>
     </mat-card>
   </div>
 </div>
-<app-farm-task *ngFor="let task of tasks" [task]="task" (delete)="delete($event)"></app-farm-task>
+<table mat-table [dataSource]="tasks" class="w-100" *ngIf="tasks && tasks.length > 0">
+  <ng-container matColumnDef="interval">
+    <th mat-header-cell *matHeaderCellDef>Interval</th>
+    <td mat-cell *matCellDef="let element">
+      {{element.timerInterval}} Minuten
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="maxDistance">
+    <th mat-header-cell *matHeaderCellDef>Max Entfernung</th>
+    <td mat-cell *matCellDef="let element">
+      {{element.maxDistance}} Felder
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="villages">
+    <th mat-header-cell *matHeaderCellDef>Dörfer</th>
+    <td mat-cell *matCellDef="let element">
+      {{element.villages.length}}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="units">
+    <th mat-header-cell *matHeaderCellDef>Einheiten</th>
+    <td mat-cell *matCellDef="let element">
+      Gruppe {{element.farmGroup}}:
+      <app-units-render-min [value]="element.units"></app-units-render-min>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="control">
+    <th mat-header-cell *matHeaderCellDef>
+      <button mat-mini-fab color="primary" (click)="add()">
+        <mat-icon>add</mat-icon>
+      </button>
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <mat-slide-toggle class="mr-2" [formControl]="slides[element.id]"></mat-slide-toggle>
+      <button class="mr-2" mat-mini-fab (click)="edit(element)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-mini-fab matTooltip="Unwiderruflich löschen." (click)="delete(element.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
 <div *ngIf="tasks && tasks.length === 0" class="row">
   <div class="col-xl-12 flex-between">
     <span></span>
