--- a/src/app/pages/farm/farm-route/farm-route.component.html
+++ b/src/app/pages/farm/farm-route/farm-route.component.html
@@ -1,17 +1,47 @@
-<div class="row">
-  <div class="col-xl-12">
-    <mat-card class="mb-3">
-      <div class="flex-between">
-        <div></div>
-        <button mat-mini-fab color="primary" (click)="add()">
-          <mat-icon>add</mat-icon>
-        </button>
-      </div>
-    </mat-card>
-  </div>
-</div>
-<app-farm-route-display *ngFor="let route of routes" [route]="route"
-                        (delete)="delete($event)"></app-farm-route-display>
+<table mat-table [dataSource]="routes" class="w-100" *ngIf="routes && routes.length > 0">
+  <ng-container matColumnDef="interval">
+    <th mat-header-cell *matHeaderCellDef>Interval</th>
+    <td mat-cell *matCellDef="let element">
+      {{element.timerInterval}} Minuten
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="source">
+    <th mat-header-cell *matHeaderCellDef>Herkunft</th>
+    <td mat-cell *matCellDef="let element">
+      <app-village-render [value]="element.source"></app-village-render>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="target">
+    <th mat-header-cell *matHeaderCellDef>Ziel</th>
+    <td mat-cell *matCellDef="let element">
+      <app-village-render [value]="element.target"></app-village-render>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="units">
+    <th mat-header-cell *matHeaderCellDef>Einheiten</th>
+    <td mat-cell *matCellDef="let element">
+      <app-units-render-min [value]="element.troops"></app-units-render-min>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="control">
+    <th mat-header-cell *matHeaderCellDef>
+      <button mat-mini-fab color="primary" (click)="add()">
+        <mat-icon>add</mat-icon>
+      </button>
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <mat-slide-toggle class="mr-2" [formControl]="slides[element.id]"></mat-slide-toggle>
+      <button class="mr-2" mat-mini-fab (click)="edit(element)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-mini-fab matTooltip="Unwiderruflich löschen." (click)="delete(element.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
 <div *ngIf="routes && routes.length === 0" class="row">
   <div class="col-xl-12 flex-between">
     <span></span>
