--- a/src/app/pages/farm/farm-overview/farm-overview.component.html
+++ b/src/app/pages/farm/farm-overview/farm-overview.component.html
@@ -1,16 +1,22 @@
 <div class="row">
   <div class="col-xl-12">
     <mat-card class="mb-3">
-        <mat-slide-toggle [formControl]="slide"></mat-slide-toggle>
-        <mat-form-field class="ml-3">
-          <mat-label>Max Angriffe</mat-label>
-          <input matInput [formControl]="max" type="number">
-          <mat-hint>Maximale Anzahl an Angriffen pro Babarendorf.</mat-hint>
-        </mat-form-field>
+      <mat-slide-toggle [formControl]="slide"></mat-slide-toggle>
+      <mat-form-field class="ml-3">
+        <mat-label>Max Angriffe</mat-label>
+        <input matInput [formControl]="max" type="number">
+        <mat-hint>Maximale Anzahl an Angriffen pro Babarendorf.</mat-hint>
+      </mat-form-field>
     </mat-card>
   </div>
 </div>
 <table mat-table [dataSource]="tasks" class="w-100" *ngIf="tasks && tasks.length > 0">
+  <ng-container matColumnDef="toggle">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <mat-slide-toggle [formControl]="slides[element.id]"></mat-slide-toggle>
+    </td>
+  </ng-container>
   <ng-container matColumnDef="interval">
     <th mat-header-cell *matHeaderCellDef>Interval</th>
     <td mat-cell *matCellDef="let element">
@@ -43,7 +49,6 @@
       </button>
     </th>
     <td mat-cell *matCellDef="let element">
-      <mat-slide-toggle class="mr-2" [formControl]="slides[element.id]"></mat-slide-toggle>
       <button class="mr-2" mat-mini-fab (click)="edit(element)">
         <mat-icon>edit</mat-icon>
       </button>
