--- a/src/app/pages/farm/farm-route/farm-route.component.html
+++ b/src/app/pages/farm/farm-route/farm-route.component.html
@@ -1,4 +1,10 @@
 <table mat-table [dataSource]="routes" class="w-100" *ngIf="routes && routes.length > 0">
+  <ng-container matColumnDef="toggle">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <mat-slide-toggle [formControl]="slides[element.id]"></mat-slide-toggle>
+    </td>
+  </ng-container>
   <ng-container matColumnDef="interval">
     <th mat-header-cell *matHeaderCellDef>Interval</th>
     <td mat-cell *matCellDef="let element">
@@ -30,7 +36,6 @@
       </button>
     </th>
     <td mat-cell *matCellDef="let element">
-      <mat-slide-toggle class="mr-2" [formControl]="slides[element.id]"></mat-slide-toggle>
       <button class="mr-2" mat-mini-fab (click)="edit(element)">
         <mat-icon>edit</mat-icon>
       </button>
