--- a/src/app/pages/scavenge/scavenge-overview/scavenge-overview.component.html
+++ b/src/app/pages/scavenge/scavenge-overview/scavenge-overview.component.html
@@ -1,18 +1,34 @@
-<div class="row">
-  <div class="col-xl-12">
-    <mat-card class="mb-3">
-      <div class="flex-between">
-        <div>
-          <mat-slide-toggle [formControl]="slide"></mat-slide-toggle>
-        </div>
-        <button mat-mini-fab color="primary" (click)="add()">
-          <mat-icon>add</mat-icon>
-        </button>
-      </div>
-    </mat-card>
-  </div>
-</div>
-<app-scavenge-task *ngFor="let task of tasks" [task]="task"></app-scavenge-task>
+<table mat-table [dataSource]="tasks" class="w-100" *ngIf="tasks && tasks.length > 0">
+  <ng-container matColumnDef="villages">
+    <th mat-header-cell *matHeaderCellDef>Dörfer</th>
+    <td mat-cell *matCellDef="let element">
+      {{element.villages.length}}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="units">
+    <th mat-header-cell *matHeaderCellDef>Einheiten</th>
+    <td mat-cell *matCellDef="let element">
+      <app-units-render-min [value]="element.troops"></app-units-render-min>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="control">
+    <th mat-header-cell *matHeaderCellDef>
+      <button mat-mini-fab color="primary" (click)="add()">
+        <mat-icon>add</mat-icon>
+      </button>
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <button class="mr-2" mat-mini-fab (click)="edit(element)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-mini-fab matTooltip="Unwiderruflich löschen." (click)="delete(element.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
 <div *ngIf="tasks && tasks.length === 0" class="row">
   <div class="col-xl-12 flex-between">
     <span></span>
