--- a/src/app/pages/farm/farm-route/farm-route.component.html
+++ b/src/app/pages/farm/farm-route/farm-route.component.html
@@ -6,15 +6,21 @@
     </mat-card>
   </div>
 </div>
-<table mat-table [dataSource]="routes" class="w-100" *ngIf="routes && routes.length > 0">
+<table matSort mat-table matSortDisableClear [dataSource]="dataSource" class="w-100">
   <ng-container matColumnDef="toggle">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
       <mat-slide-toggle [formControl]="slides[element.id]"></mat-slide-toggle>
     </td>
   </ng-container>
+  <ng-container matColumnDef="distance">
+    <th mat-sort-header mat-header-cell *matHeaderCellDef>Entfernung</th>
+    <td mat-cell *matCellDef="let element">
+      {{distance(element).toFixed(2)}}
+    </td>
+  </ng-container>
   <ng-container matColumnDef="interval">
-    <th mat-header-cell *matHeaderCellDef>Interval</th>
+    <th mat-sort-header mat-header-cell *matHeaderCellDef>Interval</th>
     <td mat-cell *matCellDef="let element">
       {{element.timerInterval}} Minuten
     </td>
@@ -55,7 +61,7 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<div *ngIf="routes && routes.length === 0" class="row">
+<div *ngIf="dataSource.routes.length === 0" class="row">
   <div class="col-xl-12 flex-between">
     <span></span>
     <span class="text-center">
