--- a/src/app/pages/farm/farm-route/farm-route.component.html
+++ b/src/app/pages/farm/farm-route/farm-route.component.html
@@ -1,14 +1,19 @@
 <div class="row">
   <div class="col-xl-12">
     <mat-card class="mb-3">
+      <mat-slide-toggle [formControl]="enableSlide">
+        Aktiviert
+      </mat-slide-toggle><br>
       <mat-slide-toggle [formControl]="autoDisableSlide"
-                        matTooltip="Routen auf Dörfer mit rotem/gelbem Bericht deaktivieren."></mat-slide-toggle>
+                        matTooltip="Routen auf Dörfer mit rotem/gelbem Bericht deaktivieren.">
+        Automatisch Routen deaktivieren
+      </mat-slide-toggle>
     </mat-card>
   </div>
 </div>
 <table matSort mat-table matSortDisableClear [dataSource]="dataSource" class="w-100">
   <ng-container matColumnDef="toggle">
-    <th mat-header-cell *matHeaderCellDef></th>
+    <th mat-sort-header mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
       <mat-slide-toggle [formControl]="slides[element.id]"></mat-slide-toggle>
     </td>
