--- a/src/app/theme/buildings-render/buildings-render.component.html
+++ b/src/app/theme/buildings-render/buildings-render.component.html
@@ -3,7 +3,7 @@
   <tr>
     <ng-container *ngFor="let building of buildings">
       <th *ngIf="value[building] > 0">
-        <img *ngIf="imagebase" [src]="imagebase+'buildings/'+building+'.png'" class="img-fluid"/>
+        <img *ngIf="imageBase" [src]="imageBase+'buildings/'+building+'.png'" class="img-fluid"/>
       </th>
     </ng-container>
   </tr>
