--- a/src/app/pages/settings/anti-captcha/anti-captcha.component.html
+++ b/src/app/pages/settings/anti-captcha/anti-captcha.component.html
@@ -3,7 +3,7 @@
     <mat-card>
       <div class="row">
         <div class="col-xl-12">
-          <mat-slide-toggle [formControl]="enable"></mat-slide-toggle>
+          <mat-slide-toggle [formControl]="enable">Anti-Captcha verwenden</mat-slide-toggle>
         </div>
       </div>
       <div class="row">
