--- a/src/app/pages/auto-builder/auto-builder-add-template/auto-builder-add-template.component.css
+++ b/src/app/pages/auto-builder/auto-builder-add-template/auto-builder-add-template.component.css
@@ -1,25 +1,24 @@
 .example-list {
-  max-height: 500px;
+  max-height: 50vh;
   max-width: 100%;
   border: solid 1px #ccc;
-  min-height: 60px;
+  min-height: 50vh;
   display: block;
-  background: white;
+  /*background: white;*/
   border-radius: 4px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .example-box {
-  padding: 20px 10px;
+  padding: 2px 10px;
   border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
   cursor: move;
-  background: white;
+  /*background: white;*/
   font-size: 14px;
 }
 
