--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -2,6 +2,11 @@
   <div class="col-xl-6">
     <div class="row">
       <div class="col-xl-12">
+        <app-admin-dev></app-admin-dev>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-12">
         <app-admin-proxy-connections></app-admin-proxy-connections>
       </div>
     </div>
