--- a/src/app/pages/catapult/catapult-group-edit/catapult-group-edit.component.html
+++ b/src/app/pages/catapult/catapult-group-edit/catapult-group-edit.component.html
@@ -22,6 +22,21 @@
         </div>
       </div>
       <div class="form-group row">
+        <div class="col-xl-3">
+          <label>Koordinate</label>
+        </div>
+        <div class="col-xl-9">
+          <mat-form-field>
+            <mat-label>X</mat-label>
+            <input matInput formControlName="coordinateX">
+          </mat-form-field>
+          <mat-form-field class="ml-2">
+            <mat-label>Y</mat-label>
+            <input matInput formControlName="coordinateY">
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="form-group row">
         <div class="col-xl-12 flex-between">
           <span></span>
           <button [disabled]="!form.valid || form.disabled" type="submit" mat-raised-button
