delete baba info button

--- a/src/app/pages/catapult/catapult-info/catapult-info.component.html
+++ b/src/app/pages/catapult/catapult-info/catapult-info.component.html
@@ -35,6 +35,14 @@
       {{element.nextAction}}
     </mat-cell>
   </ng-container>
+  <ng-container matColumnDef="delete">
+    <mat-header-cell mat-sort-header *matHeaderCellDef></mat-header-cell>
+    <mat-cell *matCellDef="let element">
+      <button mat-icon-button (click)="remove(element.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-cell>
+  </ng-container>
 
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
