--- a/src/app/pages/farm/farm-task-edit/farm-task-edit.component.html
+++ b/src/app/pages/farm/farm-task-edit/farm-task-edit.component.html
@@ -8,6 +8,7 @@
             <mat-select formControlName="farmGroup">
               <mat-option value="A">A</mat-option>
               <mat-option value="B">B</mat-option>
+              <mat-option value="C">C</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
